# phyml.github.io

./: .gitignore  DESCRIPTION.md  LICENSE  Phyml.py  README.md  WELL-E-db.py  app.py  db.py  fonctions_phyml.py  input_test.phy  phyml.db  pyproject.toml  requirements.txt  runPhyML.py  runPhyml.py  setup.cfg  test.py  utils.py
binaries/: README.md
pages/: 1_New_analysis.py
static/: home.html  index.html  pageAttente.html  pageRead.html  pageView.html  result.html  status.html
static/css/: style_forIndex.css  style_forPageAttente.css  style_forPageRead.css  style_formenu.css
static/js/: utils.js  validation.js
