[metadata]
name = PhyMl-web
url = https://nicdemon.github.io/phyml/
author = Nicolas de Montigny
author_email = nicolas.de.montigny0323@gmail.com
description = Github Pages web implementation of PhyML
long_description = file: README.md

[options]
install_requires =
    Flask
    Frozen-Flask
    Flask-FlatPages
    pandas
    numpy
    pyarrow
    tqdm
include_package_data = True
python_requires = >=3.8
scripts =
  app.py